# new

./: .gitignore  README.md  package-lock.json  package.json
backend/: T2.sql  pyproject.toml
backend/back/: db.sqlite3
backend/back/api/: admin.py  urls.py
backend/back/api/account/: urls.py  views.py
backend/back/api/auth/: urls.py  views.py
backend/back/api/map/: urls.py  views.py
backend/back/back/: settings.py  urls.py
backend/back/core/migrations/: 0001_initial.py  0002_profile_icon.py  0003_dayschedule_service_site_office.py  0004_alter_dayschedule_closetime_and_more.py  0005_profile_phone.py  0006_comments_office_comments.py  0007_alter_profile_phone.py  0008_cells.py  0009_alter_dayschedule_closetime_alter_dayschedule_day_and_more.py  0010_networkcomments.py
backend/back/core/models/: models.py
backend/back/core/utils/: serializers.py  validators.py
backend/back/main/: admin.py
backend/parser/: ceils.json  coordinates.json  pars.json
backend/tg-bot/: .env  aiorgam_run.py  bot.py  credits.py  generator.py
front/: package-lock.json  package.json  tsconfig.json
front/src/: index.ts
front/src/app/: globals.css  layout.tsx  page.tsx
front/src/app/coverage_map/: page.tsx  txt.tsx
front/src/app/profile/: page.tsx
front/src/app/register/: page.tsx
front/src/app/servecesFilter/: page.tsx
front/src/app/servecesPopup/: page.tsx
front/src/app/slide_cover/: page.tsx
front/src/app/slide_office/: page.tsx
front/src/hooks/: geo-context.tsx  notification-context.tsx  user-context.tsx
new-front/: package-lock.json  package.json
(+22 files in other folders)
